--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: clime
 Type: Package
 Title: Constrained L1-minimization for Inverse (covariance) Matrix
         Estimation
-Version: 0.2
-Date: 2011-02-01
+Version: 0.3
+Date: 2011-07-23
 Author: T. Tony Cai, Weidong Liu and Xi (Rossi) Luo
 Maintainer: Xi (Rossi) Luo <xi.rossi.luo@gmail.com>
 Depends: lpSolve
@@ -12,6 +12,6 @@ Description: A robust constrained L1 minimization method for estimating
         matrix), and recovering its support for building graphical
         models.  The computation uses linear programming.
 License: GPL-2
-Packaged: 2011-02-02 20:13:13 UTC; xl72
+Packaged: 2011-07-23 17:24:53 UTC; xluo
 Repository: CRAN
-Date/Publication: 2011-02-03 08:18:43
+Date/Publication: 2011-07-23 20:15:37
